--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 @font-face {
   font-family: "myFirstFont";
-  src: url("/fonts/Montserrat-Light.otf");
+  src: url("/blog/fonts/Montserrat-Light.otf");
 }
 header {
   display: block;
