--- a/themes/hexo-theme-indigo-card/layout/layout.ejs
+++ b/themes/hexo-theme-indigo-card/layout/layout.ejs
@@ -2,6 +2,11 @@
 <html>
 <%- partial('_partial/head') %>
 <body>
+    <style>
+        .container{
+            width: 1200px;
+        }
+    </style>
     <%- partial('_partial/loading') %>
     <%- partial('_partial/menu') %>
     <main id="main">
