--- a/themes/hexo-theme-indigo-card/layout/layout.ejs
+++ b/themes/hexo-theme-indigo-card/layout/layout.ejs
@@ -7,6 +7,7 @@
             width: 1200px;
         }
     </style>
+    <img src="https://jscheng-img.oss-cn-shanghai.aliyuncs.com/logo.png" alt="logo" hidden>
     <%- partial('_partial/loading') %>
     <%- partial('_partial/menu') %>
     <main id="main">
