--- a/themes/hexo-theme-indigo-card/layout/layout.ejs
+++ b/themes/hexo-theme-indigo-card/layout/layout.ejs
@@ -4,7 +4,10 @@
 <body>
     <style>
         .container{
-            width: 1200px;
+            /* width: 1200px; */
+        }
+        *{
+            box-sizing: border-box;
         }
     </style>
     <img src="https://jscheng-img.oss-cn-shanghai.aliyuncs.com/logo.png" alt="logo" hidden>
